--- a/dealer.mobiva/Views/Settings/ProductBrands.cshtml
+++ b/dealer.mobiva/Views/Settings/ProductBrands.cshtml
@@ -39,7 +39,7 @@
                                         foreach (var brand in Model)
                                         {
                                             <tr>
-                                                <td>brand.Name</td>
+                                                <td>@brand.Name</td>
 
                                                 <td>
                                                     @if (brand.ActiveFlg)
