--- a/dealer.mobiva/Views/Settings/ProductBrands.cshtml
+++ b/dealer.mobiva/Views/Settings/ProductBrands.cshtml
@@ -11,10 +11,11 @@
 
     <div class="row">
         <div class="col-12">
+         
             <div class="card">
                 <div class="card-header">
                     <h4 class="card-title">Marka Tanımları</h4>
-                    <a href="@Url.Action("EditProductBrand", "Settings")" class="btn btn-primary btn-sm float-right">+ Yeni Marka</a>
+                    <a href="@Url.Action("ProductBrandEdit", "Settings", new {id = 0})" class="btn btn-primary btn-sm float-right">+ Yeni Marka</a>
                 </div>
                 <div class="card-content">
                     <div class="card-body card-dashboard">
@@ -24,53 +25,31 @@
                         }
 
                         <div class="table-responsive">
-                            <table class="table table-striped table-bordered zero-configuration">
-                                <thead class="thead-dark">
+                            <table class="table table-bordered table-striped">
+                                <thead>
                                     <tr>
-                                        <th>Adı</th>
-
-                                        <th>Aktif</th>
-                                        <th style="width: 130px;">İşlemler</th>
+                                        <th>#</th>
+                                        <th>Brand Name</th>
+                                        <th class="text-center">Active</th>
+                                        <th class="text-center">Actions</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    @if (Model != null && Model.Any())
-                                    {
-                                        foreach (var brand in Model)
-                                        {
-                                            <tr>
-                                                <td>@brand.Name</td>
-
-                                                <td>
-                                                    @if (brand.ActiveFlg)
-                                                    {
-                                                        <span class="badge badge-success">Aktif</span>
-                                                    }
-                                                    else
-                                                    {
-                                                        <span class="badge badge-secondary">Pasif</span>
-                                                    }
-                                                </td>
-                                                <td>
-                                                    <a href="@Url.Action("EditProductBrand", "Settings", new { id = brand.Id })" class="btn btn-sm btn-info mr-1" title="Düzenle">
-                                                        <i class="la la-edit"></i>
-                                                    </a>
-                                                    <a href="@Url.Action("DeleteProductBrand", "Settings", new { id = brand.Id })" class="btn btn-sm btn-danger" title="Sil" onclick="return confirm('Silmek istediğinize emin misiniz?');">
-                                                        <i class="la la-trash"></i>
-                                                    </a>
-                                                </td>
-                                            </tr>
-                                        }
-                                    }
-                                    else
+                                    @foreach (var item in Model)
                                     {
                                         <tr>
-                                            <td colspan="4" class="text-center">Kayıt bulunamadı.</td>
+                                            <td>@item.Id</td>
+                                            <td>@item.Name</td>
+                                            <td class="text-center">@(item.ActiveFlg ? "Yes" : "No")</td>
+                                            <td class="text-center">
+                                                <a href="@Url.Action("ProductBrandEdit", "Settings", new {id = item.Id})" class="btn btn-sm btn-primary">Edit</a>
+                                            </td>
                                         </tr>
                                     }
                                 </tbody>
                             </table>
                         </div>
+
                     </div>
                 </div>
             </div>
