--- a/dealer.mobiva/Views/Shared/_Layout.cshtml
+++ b/dealer.mobiva/Views/Shared/_Layout.cshtml
@@ -39,6 +39,7 @@
     <link rel="stylesheet" type="text/css" href="/Content/app-assets/css/bootstrap-extended.css">
     <link rel="stylesheet" type="text/css" href="/Content/app-assets/css/colors.css">
     <link rel="stylesheet" type="text/css" href="/Content/app-assets/css/components.css">
+    <link rel="stylesheet" type="text/css" href="/Content/app-assets/css/core/menu/menu-types/vertical-content-menu.css">
     <!-- END: Theme CSS-->
 
     @RenderSection("Css", false)
