--- a/dealer.mobiva/Views/Shared/_Layout.cshtml
+++ b/dealer.mobiva/Views/Shared/_Layout.cshtml
@@ -350,7 +350,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a href="#"><i class="la la-user-plus"></i><span class="menu-title">Çalışanlar</span></a>
+                            <a href="@Url.Action("AppUsers", "Personnels")"><i class="la la-user-plus"></i><span class="menu-title">Çalışanlar</span></a>
                         </li>
 
                         <li class="nav-item">
