--- a/dealer.mobiva/Views/Shared/_Layout.cshtml
+++ b/dealer.mobiva/Views/Shared/_Layout.cshtml
@@ -330,7 +330,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a href="#"><i class="la la-users"></i><span class="menu-title">Müşteriler</span></a>
+                            <a href="@Url.Action("Index", "Customers")"><i class="la la-users"></i><span class="menu-title">Müşteriler</span></a>
                         </li>
 
                         <li class="nav-item">
