--- a/dealer.mobiva/Views/Inventory/Index.cshtml
+++ b/dealer.mobiva/Views/Inventory/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Stok";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -7,11 +7,28 @@
     <div class="row">
         <div class="col-12">
             <div class="card">
-                <div class="card-header">
-                    <h4 class="card-title">Stok Özeti</h4>
-                </div>
                 <div class="card-content collapse show">
                     <div class="card-body">
+                        <div class="btn-group mr-1 mb-1">
+                            <button type="button" class="btn btn-success btn-min-width dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Yeni Ürün Ekle</button>
+                            <div class="dropdown-menu" x-placement="bottom-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 41px, 0px);">
+                                <a class="dropdown-item" href="@Url.Action("ProductEdit", "Inventory", new { id = 0, productTypeId = 3 })">
+                                    <i class="la la-mobile mr-1"></i> Telefon
+                                </a>
+                                <a class="dropdown-item" href="@Url.Action("ProductEdit", "Inventory", new {id = 0, productTypeId = 4 })">
+                                    <i class="la la-tablet mr-1"></i> Tablet
+                                </a>
+                                <a class="dropdown-item" href="@Url.Action("ProductEdit", "Inventory", new {  id = 0, productTypeId = 5 })">
+                                    <i class="la la-clock-o mr-1"></i> Giyilebilir Teknoloji
+                                </a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="@Url.Action("ProductEdit", "Inventory", new { id = 0, productTypeId = 6 })">
+                                    <i class="la la-headphones mr-1"></i> Aksesuar
+                                </a>
+
+                            </div>
+                        </div>
+
                         <p class="card-text">
                             Stoklarınızın türlerine göre adet ve tutar bilgisini aşağıda görebilirsiniz.
                         </p>
@@ -67,5 +84,4 @@
             </div>
         </div>
     </div>
-
 </div>
