loadingOverlayOff seçeneği eklendş

--- a/dealer.mobiva/Views/Inventory/Index.cshtml
+++ b/dealer.mobiva/Views/Inventory/Index.cshtml
@@ -10,7 +10,7 @@
                 <div class="card-content collapse show">
                     <div class="card-body">
                         <div class="btn-group mr-1 mb-1">
-                            <button type="button" class="btn btn-success btn-min-width dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Yeni Ürün Ekle</button>
+                            <button type="button" class="btn btn-success btn-min-width dropdown-toggle loadingOverlayOff" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Yeni Ürün Ekle</button>
                             <div class="dropdown-menu" x-placement="bottom-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 41px, 0px);">
                                 <a class="dropdown-item" href="@Url.Action("ProductEdit", "Inventory", new { id = 0, productTypeId = 3 })">
                                     <i class="la la-mobile mr-1"></i> Telefon
